objects/Eligible_Subscription_Option__c.object
<CustomObject>
    <fields>
        <fullName>Key_Contact_Auto_Subscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Contact Auto Subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Related_Subscription__r.Name &amp;&quot; - &quot;&amp; Program__r.Program_Acronym__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Eligible Subscription Options</relationshipLabel>
        <relationshipName>Eligible_Subscription_Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Subscription</label>
        <referenceTo>Subscription_Option__c</referenceTo>
        <relationshipLabel>Eligible Subscription Options</relationshipLabel>
        <relationshipName>Eligible_Subscription_Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Eligible Subscription Option</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>EligibleSubsOption#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Subscription Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>